# PyLadder

./: GameRules.md  Laders.py  README.md  agreement.md  game.py  main .py  main.py  pyproject.toml  requirements.md  requirements.txt
.idea1/: modules.xml
.idea1/inspectionProfiles/: Project_Default.xml
Snake_Ladder/: main.py
assets/: ASAC.png:Zone.Identifier  Webp.net-resizeimage (1).png:Zone.Identifier  Webp.net-resizeimage.jpg:Zone.Identifier  loss_computer.png:Zone.Identifier  loss_player.png:Zone.Identifier  multicolor.png:Zone.Identifier  wins_computer.png:Zone.Identifier  wins_player.png:Zone.Identifier
pyladder/: pyladder.py  pyproject.toml
pyladder/assets/: 111.png:Zone.Identifier
pyladder/pyladder/: pyladder.py  score.py
pyladder/tests/: test_pyladder.py
