[tool.poetry]
name = "pyladder"
version = "0.1.0"
description = ""
authors = ["Maram-Ankir <maramankir5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
